--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 12</section>
+				<section>Slide 12
+					<h1> two phase commit </h1>
+				</section>
 				<section>Slide 2</section>
 			</div>
 		</div>
