--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div class="slides">
 				<section>Slide 12
 					<h1> two phase commit </h1>
+					<h2> 2단계 커밋 프로토콜 </h2>
 				</section>
 				<section>Slide 2</section>
 			</div>
