--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 12
+				<section>
 					<h1> two phase commit </h1>
 					<h2> 2단계 커밋 프로토콜 </h2>
 				</section>
-				<section>Slide 2</section>
+				<section>
+					<h3> 2단계 커밋 프로토콜이란? </h3>
+					<h3> 트랜잭션이 분산 데이터베이스의 모든 기록을 적절히 갱신하게 해 주는 기법.</h3>
+					<h3> 첫째, 데이터베이스는 트랜잭션을 수신하였다는 것을 확인을 합니다. 둘째, 각 데이터베이스는 트랜잭션을 수행하라는 지시를 받고 실제 갱신을 합니다.</h3>
+
+				</section>
 			</div>
 		</div>
 
