--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 					<h3> 첫째, 데이터베이스는 트랜잭션을 수신하였다는 것을 확인을 합니다. 둘째, 각 데이터베이스는 트랜잭션을 수행하라는 지시를 받고 실제 갱신을 합니다.</h3>
 
 				</section>
+				<section>
+					
+					
+				</section>
+
 			</div>
 		</div>
 
