--- a/index.html
+++ b/index.html
@@ -31,32 +31,36 @@
 				<section>
 					<h3> Two-phase Commit -> 트랜잭션 </h3>
 					<br>
-					<h3 style = "font-size: 30px;"> 트랜잭션은 시작과 끝이 있는 독립적인 일 여러 개를 하나로 묶어놓고 그 중 어느 하나라도 실패하면 모든 일들을 시작하기 전 상태로 돌리는 하나의 작업 단위를 말합니다.</h3>
-					<h3 style = "font-size: 30px;"> 여러 개의 일을 묶어놓은 것이지만 하나의 작업으로 보는 것입니다.</h3>
+					<h3 style = "font-size: 30px;"> 시작과 끝이 있는 독립적인 일 여러 개를 하나로 묶어놓고 그 중 어느 하나라도 실패하면 모든 일들을 시작하기 전 상태로 돌리는 하나의 작업 단위</h3>
+					<img src="./img/transection.png">
 				</section>
 
 				<section>
 					<h1 style = "color : skyblue">
-						ACID 및 예시
+						ACID
 					</h1>
+					<h3>(원자성, 일관성, 고립성, 지속성)</h3>
 					<br>
 					<h3 style = "font-size:30px">ACID : 트랜잭션이 안전하게 수행된다는 것을 보장하기 위한 4가지 성질</h3>
-					<br>
+				</section>
+				<section>
+
 					<h3 style = "font-size:30px">
-						원자성 -> 은행 간 이체
+						원자성(Atomicity)
 					</h3>
+					<img src="./img/atomicity.png">
 					<br>
 				</section>
 				<section>
 					<h3 style = "font-size:40px">
-						일관성
+						일관성(Consistency)
 					</h3>
 					<img src="./img/consistency.png" alt="사진">
 				</section>
 
 				<section>
 					<h3 style = "font-size:30px">
-						고립성
+						고립성(isolation)
 					</h3>
 					<img src="./img/Isolation.png" alt="사진" width="400" height = "400">
 					<h3 style = "font-size:25px">다수의 트랜잭션이 동시에 수행되더라도 한번에 하나씩 수행되는 것과 동일한 결과를 가져야 하는 성질</h3>
@@ -64,7 +68,9 @@
 
 				<section>
 
-					<h3>지속성</h3>
+					<h3>
+						지속성(Durability)
+					</h3>
 					<br>
 					<h3 style = "font-size:30px">성공적으로 수행된 트랜잭션은 영원히 반영되어야 함을 말합니다.</h3>
 					<h3 style = "font-size:30px">비휘발성 저장장치(하드디스크나 디스크 등과 같은 보조기억장치)에 저장됨을 의미합니다.</h3>
