--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					<br>
 					<img src="./img/2pc.png" alt="사진">
 					<br>
-					<h6>트랜잭션을 커밋할지, 롤백할지에 대한 분산 트랜잭션에 관여하는 분산 알고리즘입니다.</h6>
+					<h6>트랜잭션을 커밋할지, 롤백할지에 대한 분산 트랜잭션에 관여하는 분산 알고리즘</h6>
 					<h6>coodinator(코디네이터) : 트랜잭션을 만드는 트랜잭션 관리자</h6>
 					<h6>cohort : 코디네이터가 보낸 트랜잭션에 대해 예/아니오 상태로 작업 준비 상황을 알립니다.</h6>
 				</section>
