--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</h3>
 					<br>
 					<h3 style = "font-size:30px">성공적으로 수행된 트랜잭션은 영원히 반영되어야 함을 말합니다.</h3>
-					<h3 style = "font-size:30px">비휘발성 저장장치(하드디스크나 디스크 등과 같은 보조기억장치)에 저장됨을 의미합니다.</h3>
+					<h3 style = "font-size:30px">비휘발성 저장장치(하드디스크나 디스크 등과 같은 보조기억장치)에 저장이 됩니다.</h3>
 				</section>
 
 				<section>
@@ -111,7 +111,7 @@
 
 				</section>
 				<section>
-					<h2>DB와 관련된 얘기</h2>
+					<h2>DB</h2>
 					<br>
 					<h6>DB의 클러스터링 기법(비슷한 데이터끼리 묶어주는 머신러닝 기법)에 주로 사용되는 편이며 </h6>
 					<h6>mysql에서는 NDB cluster가 2PC를 이용하고 있고, 오라클에서도 7.0 버전 이후에서 제공되고 있습니다.</h6>
