--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 					<h6>국내에는 GOLDILOCKS(골디락)가 있습니다.</h6>
 				</section>
 				<section>
-
-
+					<h2>골디락에서의 2PC</h2>
+					<img src="./img/goldilocks.jpg">
 				</section>
 			</div>
 		</div>
