--- a/index.html
+++ b/index.html
@@ -107,10 +107,8 @@
 				<section>
 					<h2>2pc의 문제점</h2>
 					<br>
-					<h6>2pc를 사용하면서도 문제점이 발생할 수 있습니다.</h6>
-					<h6>코호트가 전송한 vote 메시지를 코디네이터가 죽어서 commit이나 rollback 메시지를 보내지 못하면</h6>
-					<h6>yes 메시지를 보낸 코호트가 안전하게 상태를 회복할 방법이 존재하지 않습니다.</h6>
-					<h6>이는 yes 메시지를 보낸 코호트의 상태가 undefind이기 때문입니다.</h6>
+					<img src="./img/cancel.PNG>
+						  
 					<h6>이에 관해서는 3pc(three phase commit)에 대해서 더 공부할 필요가 있습니다.</h6>
 					<br>
 					<h6>또한 각각 다른 특징을 가진 DB를 분리한 상황에서는 구현이 쉽지 않습니다.</h6>
