--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<section>
 					<h2>2pc의 문제점</h2>
 					<br>
-					<img src="./img/cancel.PNG>
+					<img src="./img/cancel.PNG">
 						  
 					<h6>이에 관해서는 3pc(three phase commit)에 대해서 더 공부할 필요가 있습니다.</h6>
 					<br>
