--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<h6>또한 각각 다른 특징을 가진 DB를 분리한 상황에서는 구현이 쉽지 않습니다.</h6>
 				</section>
 		         	<section>
-				<img src="./img/3pc.png>
+				<img src="./img/3pc.png">
 				</section>
 			</div>
 		</div>
